--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,8 @@
 /apertium-ssw.ssw.rlx -text
 /apertium-ssw.ssw.twoc -text
 /apertium-ssw.ssw.twol -text
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
